@@ -1,21 +1,19 @@
 package org.hyperledger.iroha.android.offline;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
-import org.hyperledger.iroha.android.client.JsonParser;
 
-/** Immutable view over `/v1/offline/transfers` responses. */
+/** Parsed response for Torii offline transfer list APIs. */
 public final class OfflineTransferList {
-
   private final List<OfflineTransferItem> items;
   private final long total;
 
   public OfflineTransferList(final List<OfflineTransferItem> items, final long total) {
-    this.items = List.copyOf(Objects.requireNonNull(items, "items"));
+    this.items = Collections.unmodifiableList(new ArrayList<>(items));
     this.total = total;
   }
 
@@ -27,94 +25,70 @@ public final class OfflineTransferList {
     return total;
   }
 
+  /** One offline transfer record returned by Torii. */
   public static final class OfflineTransferItem {
     private final String bundleIdHex;
+    private final String controllerId;
+    private final String controllerDisplay;
     private final String receiverId;
     private final String receiverDisplay;
     private final String depositAccountId;
     private final String depositAccountDisplay;
     private final String assetId;
-    private final long receiptCount;
     private final String totalAmount;
     private final String claimedDelta;
     private final String status;
-    private final Long recordedAtMs;
-    private final Long recordedAtHeight;
-    private final String statusTransitionsJson;
-    private final String platformPolicy;
-    private final PlatformTokenSnapshot platformTokenSnapshot;
-    private final String transferJson;
+    private final long receiptCount;
+    private final long recordedAtMs;
+    private final long recordedAtHeight;
+    private final Map<String, Object> transfer;
+    private final List<ReceiptSummary> receiptSummaries;
 
     public OfflineTransferItem(
         final String bundleIdHex,
+        final String controllerId,
+        final String controllerDisplay,
         final String receiverId,
         final String receiverDisplay,
         final String depositAccountId,
         final String depositAccountDisplay,
         final String assetId,
-        final long receiptCount,
-        final String totalAmount,
-        final String claimedDelta,
-        final String platformPolicy,
-        final PlatformTokenSnapshot platformTokenSnapshot,
-        final String transferJson) {
-      this(
-          bundleIdHex,
-          receiverId,
-          receiverDisplay,
-          depositAccountId,
-          depositAccountDisplay,
-          assetId,
-          receiptCount,
-          totalAmount,
-          claimedDelta,
-          null,
-          null,
-          null,
-          null,
-          platformPolicy,
-          platformTokenSnapshot,
-          transferJson);
-    }
-
-    public OfflineTransferItem(
-        final String bundleIdHex,
-        final String receiverId,
-        final String receiverDisplay,
-        final String depositAccountId,
-        final String depositAccountDisplay,
-        final String assetId,
-        final long receiptCount,
         final String totalAmount,
         final String claimedDelta,
         final String status,
-        final Long recordedAtMs,
-        final Long recordedAtHeight,
-        final String statusTransitionsJson,
-        final String platformPolicy,
-        final PlatformTokenSnapshot platformTokenSnapshot,
-        final String transferJson) {
-      this.bundleIdHex = Objects.requireNonNull(bundleIdHex, "bundleIdHex");
-      this.receiverId = Objects.requireNonNull(receiverId, "receiverId");
-      this.receiverDisplay = Objects.requireNonNull(receiverDisplay, "receiverDisplay");
-      this.depositAccountId = Objects.requireNonNull(depositAccountId, "depositAccountId");
-      this.depositAccountDisplay =
-          Objects.requireNonNull(depositAccountDisplay, "depositAccountDisplay");
-      this.assetId = assetId;
+        final long receiptCount,
+        final long recordedAtMs,
+        final long recordedAtHeight,
+        final Map<String, Object> transfer,
+        final List<ReceiptSummary> receiptSummaries) {
+      this.bundleIdHex = nullToEmpty(bundleIdHex);
+      this.controllerId = nullToEmpty(controllerId);
+      this.controllerDisplay = nullToEmpty(controllerDisplay);
+      this.receiverId = nullToEmpty(receiverId);
+      this.receiverDisplay = nullToEmpty(receiverDisplay);
+      this.depositAccountId = nullToEmpty(depositAccountId);
+      this.depositAccountDisplay = nullToEmpty(depositAccountDisplay);
+      this.assetId = nullToEmpty(assetId);
+      this.totalAmount = nullToEmpty(totalAmount);
+      this.claimedDelta = nullToEmpty(claimedDelta);
+      this.status = nullToEmpty(status);
       this.receiptCount = receiptCount;
-      this.totalAmount = Objects.requireNonNull(totalAmount, "totalAmount");
-      this.claimedDelta = Objects.requireNonNull(claimedDelta, "claimedDelta");
-      this.status = status;
       this.recordedAtMs = recordedAtMs;
       this.recordedAtHeight = recordedAtHeight;
-      this.statusTransitionsJson = statusTransitionsJson;
-      this.platformPolicy = platformPolicy;
-      this.platformTokenSnapshot = platformTokenSnapshot;
-      this.transferJson = transferJson;
+      this.transfer = immutableMap(transfer);
+      this.receiptSummaries = Collections.unmodifiableList(new ArrayList<>(receiptSummaries));
     }
 
     public String bundleIdHex() {
       return bundleIdHex;
+    }
+
+    public String controllerId() {
+      return controllerId;
+    }
+
+    public String controllerDisplay() {
+      return controllerDisplay;
     }
 
     public String receiverId() {
@@ -137,10 +111,6 @@ public final class OfflineTransferList {
       return assetId;
     }
 
-    public long receiptCount() {
-      return receiptCount;
-    }
-
     public String totalAmount() {
       return totalAmount;
     }
@@ -153,191 +123,123 @@ public final class OfflineTransferList {
       return status;
     }
 
-    public Long recordedAtMs() {
+    public long receiptCount() {
+      return receiptCount;
+    }
+
+    public long recordedAtMs() {
       return recordedAtMs;
     }
 
-    public Long recordedAtHeight() {
+    public long recordedAtHeight() {
       return recordedAtHeight;
     }
 
-    public String statusTransitionsJson() {
-      return statusTransitionsJson;
+    public Map<String, Object> transfer() {
+      return transfer;
     }
 
-    public String platformPolicy() {
-      return platformPolicy;
+    public List<ReceiptSummary> receiptSummaries() {
+      return receiptSummaries;
     }
 
-    public PlatformTokenSnapshot platformTokenSnapshot() {
-      return platformTokenSnapshot;
-    }
-
-    /** Raw Norito JSON of the submitted bundle. */
-    public String transferJson() {
-      return transferJson;
-    }
-
-    /**
-     * Serialises this transfer item into a JSON-ready map.
-     *
-     * <p>Use {@link org.hyperledger.iroha.android.client.JsonEncoder#encode(Object)} to cache the
-     * resulting structure locally.</p>
-     */
-    public Map<String, Object> toJsonMap() {
-      final Map<String, Object> json = new LinkedHashMap<>();
-      json.put("bundle_id_hex", bundleIdHex);
-      json.put("receiver_id", receiverId);
-      json.put("receiver_display", receiverDisplay);
-      json.put("deposit_account_id", depositAccountId);
-      json.put("deposit_account_display", depositAccountDisplay);
-      if (assetId != null) {
-        json.put("asset_id", assetId);
-      }
-      json.put("receipt_count", receiptCount);
-      json.put("total_amount", totalAmount);
-      json.put("claimed_delta", claimedDelta);
-      if (status != null) {
-        json.put("status", status);
-      }
-      if (recordedAtMs != null) {
-        json.put("recorded_at_ms", recordedAtMs);
-      }
-      if (recordedAtHeight != null) {
-        json.put("recorded_at_height", recordedAtHeight);
-      }
-      if (statusTransitionsJson != null && !statusTransitionsJson.isBlank()) {
-        json.put("status_transitions", JsonParser.parse(statusTransitionsJson));
-      }
-      if (platformPolicy != null) {
-        json.put("platform_policy", platformPolicy);
-      }
-      if (platformTokenSnapshot != null) {
-        json.put("platform_token_snapshot", platformTokenSnapshot.toJsonMap());
-      }
-      json.put("transfer", transferAsMap());
-      return Collections.unmodifiableMap(json);
-    }
-
-    /**
-     * Parses the raw transfer JSON into an immutable map representation.
-     *
-     * @throws IllegalStateException if the JSON payload is malformed or not an object
-     */
-    @SuppressWarnings("unchecked")
-    public Map<String, Object> transferAsMap() {
-      if (transferJson == null || transferJson.isBlank()) {
-        return Collections.emptyMap();
-      }
-      final Object parsed = JsonParser.parse(transferJson);
-      if (!(parsed instanceof Map)) {
-        throw new IllegalStateException("transfer is not a JSON object");
-      }
-      return Collections.unmodifiableMap((Map<String, Object>) parsed);
-    }
-
-    /**
-     * Returns a summary of the first receipt embedded in the transfer payload, when present.
-     *
-     * <p>Transfers aggregate multiple receipts; for audit logging we only need the first entry to
-     * capture the sender/receiver/asset context associated with the bundle.</p>
-     */
-    @SuppressWarnings("unchecked")
     public Optional<ReceiptSummary> firstReceiptSummary() {
-      final Map<String, Object> payload = transferAsMap();
-      if (payload.isEmpty()) {
+      if (receiptSummaries.isEmpty()) {
         return Optional.empty();
       }
-      final Object receiptsNode = payload.get("receipts");
-      if (!(receiptsNode instanceof List<?> receipts) || receipts.isEmpty()) {
-        return Optional.empty();
-      }
-      final Object first = receipts.get(0);
-      if (!(first instanceof Map<?, ?> rawReceipt)) {
-        return Optional.empty();
-      }
-      final Map<String, Object> receipt = (Map<String, Object>) rawReceipt;
-      final String sender = stringValue(receipt.get("from"));
-      final String receiver = stringValue(receipt.get("to"));
-      final String asset = stringValue(receipt.get("asset"));
-      final String amount = stringValue(receipt.get("amount"));
-      if (sender == null || receiver == null || amount == null) {
-        return Optional.empty();
-      }
-      return Optional.of(new ReceiptSummary(sender, receiver, asset, amount));
+      return Optional.of(receiptSummaries.get(0));
     }
 
-    private static String stringValue(final Object value) {
-      if (value == null) {
-        return null;
+    public Map<String, Object> toJsonMap() {
+      final Map<String, Object> map = new LinkedHashMap<>();
+      map.put("bundle_id_hex", bundleIdHex);
+      map.put("controller_id", controllerId);
+      map.put("controller_display", controllerDisplay);
+      map.put("receiver_id", receiverId);
+      map.put("receiver_display", receiverDisplay);
+      map.put("deposit_account_id", depositAccountId);
+      map.put("deposit_account_display", depositAccountDisplay);
+      map.put("asset_id", assetId);
+      map.put("total_amount", totalAmount);
+      map.put("claimed_delta", claimedDelta);
+      map.put("status", status);
+      map.put("receipt_count", receiptCount);
+      map.put("recorded_at_ms", recordedAtMs);
+      map.put("recorded_at_height", recordedAtHeight);
+      if (!transfer.isEmpty()) {
+        map.put("transfer", transfer);
       }
-      if (value instanceof String string) {
-        return string;
+      if (!receiptSummaries.isEmpty()) {
+        final List<Map<String, Object>> summaries = new ArrayList<>(receiptSummaries.size());
+        for (final ReceiptSummary summary : receiptSummaries) {
+          summaries.add(summary.toJsonMap());
+        }
+        map.put("receipt_summaries", summaries);
       }
-      final String converted = String.valueOf(value).trim();
-      return converted.isEmpty() ? null : converted;
+      return map;
+    }
+  }
+
+  /** Compact receipt fields used for offline transfer list previews. */
+  public static final class ReceiptSummary {
+    private final String senderId;
+    private final String receiverId;
+    private final String amount;
+    private final String assetId;
+    private final String status;
+
+    public ReceiptSummary(
+        final String senderId,
+        final String receiverId,
+        final String amount,
+        final String assetId,
+        final String status) {
+      this.senderId = nullToEmpty(senderId);
+      this.receiverId = nullToEmpty(receiverId);
+      this.amount = nullToEmpty(amount);
+      this.assetId = nullToEmpty(assetId);
+      this.status = nullToEmpty(status);
     }
 
-    /** Lightweight projection of receipt details for audit logging. */
-    public static final class ReceiptSummary {
-      private final String senderId;
-      private final String receiverId;
-      private final String assetId;
-      private final String amount;
-
-      private ReceiptSummary(
-          final String senderId,
-          final String receiverId,
-          final String assetId,
-          final String amount) {
-        this.senderId = Objects.requireNonNull(senderId, "senderId");
-        this.receiverId = Objects.requireNonNull(receiverId, "receiverId");
-        this.assetId = assetId;
-        this.amount = Objects.requireNonNull(amount, "amount");
-      }
-
-      public String senderId() {
-        return senderId;
-      }
-
-      public String receiverId() {
-        return receiverId;
-      }
-
-      public String assetId() {
-        return assetId;
-      }
-
-      public String amount() {
-        return amount;
-      }
+    public String senderId() {
+      return senderId;
     }
 
-    /** Snapshot of the platform token captured at settlement time. */
-    public static final class PlatformTokenSnapshot {
-      private final String policy;
-      private final String attestationJwsB64;
-
-      public PlatformTokenSnapshot(final String policy, final String attestationJwsB64) {
-        this.policy = Objects.requireNonNull(policy, "policy");
-        this.attestationJwsB64 = Objects.requireNonNull(attestationJwsB64, "attestationJwsB64");
-      }
-
-      public String policy() {
-        return policy;
-      }
-
-      public String attestationJwsB64() {
-        return attestationJwsB64;
-      }
-
-      /** Returns a JSON-ready map representation of the snapshot. */
-      public Map<String, String> toJsonMap() {
-        final Map<String, String> snapshot = new LinkedHashMap<>();
-        snapshot.put("policy", policy);
-        snapshot.put("attestation_jws_b64", attestationJwsB64);
-        return Collections.unmodifiableMap(snapshot);
-      }
+    public String receiverId() {
+      return receiverId;
     }
+
+    public String amount() {
+      return amount;
+    }
+
+    public String assetId() {
+      return assetId;
+    }
+
+    public String status() {
+      return status;
+    }
+
+    public Map<String, Object> toJsonMap() {
+      final Map<String, Object> map = new LinkedHashMap<>();
+      map.put("sender_id", senderId);
+      map.put("receiver_id", receiverId);
+      map.put("amount", amount);
+      map.put("asset_id", assetId);
+      map.put("status", status);
+      return map;
+    }
+  }
+
+  private static String nullToEmpty(final String value) {
+    return value == null ? "" : value;
+  }
+
+  private static Map<String, Object> immutableMap(final Map<String, Object> value) {
+    if (value == null || value.isEmpty()) {
+      return Collections.emptyMap();
+    }
+    return Collections.unmodifiableMap(new LinkedHashMap<>(value));
   }
 }
